# ESP32_AdBlocker_Reborn

./: .gitignore  CMakeLists.txt  ISSUES.md  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  acl.c  acl.h  blocklist.c  blocklist.h  dns_server.cpp  dns_server.h  dns_sink.cpp  domain.c  domain.h  dot.c  dot.h  http_fetch.c  http_fetch.h  idf_component.yml  murmur3.c  murmur3.h  query_log.c  query_log.h  rewrite.c  rewrite.h  timesync.c  timesync.h  web_ui.cpp  web_ui.h
